--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,7 @@
     padding-top: 100px
 }
 
-.pro {
-  text-decoration: underline;
-}
+
 
 
 .top-cloud {
@@ -69,7 +67,7 @@ h1 {
   color: #850E35;
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
+  font-family: 'Roberto Mono', monospace;
 
 }
 
