--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,18 @@
     padding-top: 100px
 }
 
+
+
+
 .top-cloud {
-  position: absolute;
-  right: 1250px;
+  position: relative;
+  left: 400px;
   top: 100px;
 }
 
 .bottom-cloud {
-  position: absolute;
-  left: 1250px;
+  position: relative;
+  right: 150px;
   bottom: 100px;
 }
 
