--- a/styles.css
+++ b/styles.css
@@ -17,21 +17,15 @@
 }
 
 .middle-container {
-  position: relative;
-  text-align: center;
-  padding: 50px;
-  margin: 100px 0;
-}
-
-.inline {
-  display: inline;
+  padding-top: 100px;
 }
 
 .skills {
-  display: inline-block;
-  margin: auto;
-  width: 25%;
-  height: 50%;
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: left;
+  line-height: 2;
+  padding-bottom: 30px;
 }
 
 .info {
@@ -40,30 +34,44 @@
   align-items: center;
 }
 
+.bio {
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: center;
+  line-height: 2;
+  padding-bottom: 30px;
+
+}
+
 .icon {
-  max-width: 250px;
-  max-height: 250px;
+  width: 10%;
+  float: left;
+  margin-right: 30px;
 }
 
 .bottom-container {
   background-color: #FFF5E4;
   position: relative;
   margin: auto;
-  padding-bottom: 100px;
+  line-height: 2;
+  padding-bottom: 16px;
 }
 
+.footer-link {
+  margin: 10px;
+  padding-top: 20px;
+}
 
 
 body {
   color: black;
   font-family: 'Merriweather', serif;
-  margin: 0;
   text-align: center;
 }
 
 h1 {
   color: #850E35;
-  font-size: 5.625rem;
+  font-size: 5.625em;
   margin: 50px auto 0 auto;
   font-family: 'Roberto Mono', monospace;
 
@@ -74,9 +82,11 @@ h2 {
   font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
   padding-bottom: 10px;
+  text-align: center;
 }
 
 h3 {
+  text-align: center;
   color: #EE6983;
   font-size: 2rem;
   font-family: 'Montserrat', sans-serif;
@@ -85,7 +95,7 @@ h3 {
 
 p {
   line-height: 2;
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 
 hr {
@@ -97,7 +107,7 @@ hr {
 }
 
 a {
-  font-size: 1.25rem;
+  font-size: 1.5em;
   text-decoration: none;
 }
 .btn {
@@ -113,8 +123,9 @@ a {
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
-  padding: 10px 20px 10px 20px;
+  padding: 30px;
   text-decoration: none;
+
 }
 
 .btn:hover {
@@ -125,4 +136,14 @@ a {
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
+  padding: 30px;
+}
+
+.row {
+  padding-top: 40px;
+}
+
+.icons {
+  margin-top: 100px;
+  font-size: 1em;
 }
