--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .top-container {
     background-color: #FFF5E4;
     position: relative;
-    padding-top: 100px
+    padding-top: 50px;
 }
 
 .top-cloud {
@@ -16,6 +16,11 @@
   bottom: 100px;
 }
 
+.SN {
+  position: relative;
+  right: 75px;
+}
+
 .middle-container {
   padding-top: 100px;
 }
@@ -25,7 +30,7 @@
   width: 50%;
   text-align: left;
   line-height: 2;
-  padding-bottom: 30px;
+  padding-bottom: 100px;
 }
 
 .info {
@@ -44,7 +49,7 @@
 }
 
 .icon {
-  width: 10%;
+  width: 15%;
   float: left;
   margin-right: 30px;
 }
@@ -54,7 +59,7 @@
   position: relative;
   margin: auto;
   line-height: 2;
-  padding-bottom: 16px;
+  padding-bottom: 20px;
 }
 
 .footer-link {
@@ -65,7 +70,7 @@
 
 body {
   color: black;
-  font-family: 'Merriweather', serif;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
 
@@ -91,11 +96,12 @@ h3 {
   font-size: 2rem;
   font-family: 'Montserrat', sans-serif;
 
+
 }
 
 p {
   line-height: 2;
-  font-size: 1.5em;
+  font-size: 1.75em;
 }
 
 hr {
@@ -109,6 +115,7 @@ hr {
 a {
   font-size: 1.5em;
   text-decoration: none;
+  color: #EE6983;
 }
 .btn {
   background: #a35050;
@@ -141,9 +148,4 @@ a {
 
 .row {
   padding-top: 40px;
-}
-
-.icons {
-  margin-top: 100px;
-  font-size: 1em;
 }
