--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,41 @@
 .top-container {
-    background-color: #FFF5E4;
-    position: relative;
+    
+    background-image: linear-gradient(180deg,#FFF5E4,#f0f0f0);
     padding-top: 50px;
 }
 
 .top-cloud {
   position: relative;
-  left: 400px;
+  left: 25%;
   top: 100px;
 }
 
 .bottom-cloud {
   position: relative;
-  right: 150px;
+  right: 25%;
   bottom: 100px;
 }
 
-.SN {
+/*.SN {
   position: relative;
   right: 75px;
-}
+  width:15%;
+}*/
 
 .middle-container {
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 .skills {
   margin: 100px auto 100px auto;
-  width: 50%;
+  width: 40%;
   text-align: left;
   line-height: 2;
-  padding-bottom: 100px;
+  padding-bottom:25px;
 }
 
 .info {
-  width: 30%;
+  width: 50%;
   margin: auto;
   align-items: center;
 }
@@ -44,7 +45,7 @@
   width: 50%;
   text-align: center;
   line-height: 2;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
 
 }
 
@@ -55,11 +56,14 @@
 }
 
 .bottom-container {
-  background-color: #FFF5E4;
+  background-image: linear-gradient(180deg,#f0f0f0,#FFF5E4);
   position: relative;
   margin: auto;
   line-height: 2;
   padding-bottom: 20px;
+  margin-left: auto;
+  margin-right:auto;
+  border-width: 100%;
 }
 
 .footer-link {
@@ -72,19 +76,24 @@ body {
   color: black;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
+  background-color: #f0f0f0;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  margin-top: auto;
+  margin-bottom:auto;
 }
 
 h1 {
   color: #850E35;
   font-size: 5.625em;
-  margin: 50px auto 0 auto;
+  margin: 5px auto 0 auto;
   font-family: 'Roberto Mono', monospace;
 
 }
 
 h2 {
   color: #850E35;
-  font-size: 2.5rem;
+  font-size: 2.0rem;
   font-family: 'Montserrat', sans-serif;
   padding-bottom: 10px;
   text-align: center;
@@ -101,13 +110,13 @@ h3 {
 
 p {
   line-height: 2;
-  font-size: 1.75em;
+  font-size: 1.25em;
 }
 
 hr {
-  border: dotted #FFC4C4 6px;
+  border: dotted #FFC4C4 5px;
   border-bottom: none;
-  width: 15%;
+  width: 70%;
   margin: 100px auto;
 
 }
