--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,15 @@
 
 .top-cloud {
   position: relative;
-  left: 25%;
-  top: 100px;
+  left: 40%;
+  top: 5rem;
 }
 
 .bottom-cloud {
   position: relative;
-  right: 25%;
-  bottom: 100px;
+  right: 40%;
+  bottom: 10rem;
 }
-
-/*.SN {
-  position: relative;
-  right: 75px;
-  width:15%;
-}*/
 
 .middle-container {
   padding-top: 50px;
@@ -136,21 +130,18 @@ a {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
+  border-style:hidden;
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
   padding: 30px;
-  text-decoration: none;
+  text-decoration:wavy;
 
 }
 
 .btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  background: #d1d1d1;
+  background-image: -webkit-linear-gradient(top, #f5dada, #3d3d3d);
   text-decoration: none;
   padding: 30px;
 }
